--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sports App</title>
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./style/style.css" />
   </head>
   <body>
     <!-- Initial Modal 1 to enter title and number of rows -->
@@ -45,6 +45,6 @@
       <tfoot id="tableFoot"></tfoot>
     </table>
 
-    <script src="./main.js"></script>
+    <script src="./script/main.js"></script>
   </body>
 </html>
