--- a/index.html
+++ b/index.html
@@ -50,14 +50,14 @@
           <input class="input" id="title" name="title" type="text" />
           <label for="rows">Number of Rows</label>
           <input class="input" id="rows" name="rows" type="text" />
-          <button class="submitButton1" type="submit">Submit</button>
+          <button class="submit submitButton1" type="submit">Submit</button>
         </div>
       </div>
 
       <!-- Initial Modal 2 to enter types of rows -->
       <div class="initialModal2">
         <div class="initialModal2content"></div>
-        <button class="submitButton2" type="submit">Submit</button>
+        <button class="submit submitButton2" type="submit">Submit</button>
       </div>
 
       <!-- Buttons to add entries -->
@@ -69,7 +69,7 @@
       <!-- Modal to add entries -->
       <div class="modal">
         <div class="modalContent"></div>
-        <button class="submitButton3" type="submit">Submit</button>
+        <button class="submit submitButton3" type="submit">Submit</button>
       </div>
 
       <!-- Table -->
@@ -84,52 +84,14 @@
       <!-- Filters -->
       <div class="filters">
         <form>
-          <label for="show">Show</label>
+          <label for="show"><span id="showLabel">Show</span></label>
           <input type="radio" name="show" value="3" id="3" />3
           <input type="radio" name="show" value="5" id="5" />5
           <input type="radio" name="show" value="10" /> 10
           <input type="radio" name="show" value="15" /> 15
-          <button class="submitButton4" type="submit">Submit</button>
+          <button class="submit submitButton4" type="submit">Submit</button>
         </form>
       </div>
-
-      <!-- Race Report -->
-      <aside>
-        <h2>Report</h2>
-
-        <iframe
-          width="320"
-          height="200"
-          src="https://www.youtube.com/embed/2FIJUUnEkR8"
-          title="YouTube video player"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-          allowfullscreen
-        ></iframe>
-
-        <p>
-          Defending champion Elaine Thompson-Herah led home a Jamaican clean
-          sweep in the Olympic women’s 100 metres final, posting an amazing
-          10.61 seconds to become the second-fastest woman in history.
-        </p>
-
-        <p>
-          Shelly-Ann Fraser-Pryce, who had been seeking a third gold in the
-          event, took silver in 10.74 with Shericka Jackson third in 10.76 at
-          the Tokyo Olympic Stadium on Saturday.
-        </p>
-
-        <p>
-          Defending champion Elaine Thompson-Herah led home a Jamaican clean
-          sweep in the Olympic women’s 100 metres final, posting an amazing
-          10.61 seconds to become the second-fastest woman in history.
-        </p>
-
-        <p>
-          Shelly-Ann Fraser-Pryce, who had been seeking a third gold in the
-          event, took silver in 10.74 with Shericka Jackson third in 10.76 at
-          the Tokyo Olympic Stadium on Saturday.
-        </p>
-      </aside>
     </div>
 
     <!-- Footer -->
