--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           alt="The logo of the International Olympic Committee, the Olympic Rings"
       /></a>
       <a class="right" href="#">COMPETITIONS</a>
-      <button id="install" class="right">INSTALL</button>
+      <a class="right" id="install" href="#">INSTALL</a>
     </nav>
 
     <!-- Main element container -->
