--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
   <body>
     <!-- Navigation bar on top -->
     <nav>
-      <a class="left" href="#">HOME</a>
-      <a class="left" href="#">SPORTS</a>
+      <a class="left" href="#">HISTORY</a>
+      <a class="left" href="#">ATHLETES</a>
       <a class="center" target="_blank" href="https://olympics.com/en/"
         ><img
           class="logo"
@@ -38,7 +38,7 @@
           alt="The logo of the International Olympic Committee, the Olympic Rings"
       /></a>
       <a class="right" href="#">COMPETITIONS</a>
-      <a class="right" id="install" href="#">INSTALL</a>
+      <a class="right" href="#">SPORTS</a>
     </nav>
 
     <!-- Main element container -->
